# uap-rust

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md
src/: .ua.rs.swp  client.rs  device.rs  lib.rs  os.rs  parser.rs  result.rs  ua.rs  yaml.rs
